# wallet-compatible-derivation

./: Cargo.toml  README.md
crates/bacon/: Cargo.toml
crates/bacon/src/: config.rs  main.rs  read_config_from_stdin.rs
crates/lib/: Cargo.toml
crates/lib/src/: account_path.rs  bip32_path.rs  derive_account_address.rs  lib.rs
crates/saehrimnir/: Cargo.toml
crates/saehrimnir/src/: account.rs  account_path.rs  bip32_path.rs  derive_account_address.rs  derive_key_pair.rs  error.rs  factor_source_id.rs  lib.rs  mnemonic.rs  mnemonic_24words.rs  network_id.rs  to_hex.rs
crates/wallet_compatible_derivation/: Cargo.toml
crates/wallet_compatible_derivation/src/: account.rs  account_path.rs  bip32_path.rs  derive_account_address.rs  derive_key_pair.rs  error.rs  factor_source_id.rs  lib.rs  mnemonic_24words.rs  network_id.rs
crates/wallet_compatible_derivation_cli/: Cargo.toml
crates/wallet_compatible_derivation_cli/src/: config.rs  main.rs  read_config_from_stdin.rs
