[package]
name = "saehrimnir"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
bip39 = "2.0.0"
slip10 = "0.4.3"
radix-engine-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.1.1" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.1.1" }
thiserror = { workspace = true }
derive_more = { version = "1.0.0-beta.6", features = ["debug", "display"] }
itertools = "0.12.1"
