[package]
name = "wallet_compatible_derivation"
version = "0.1.1"
edition = "2021"

[dependencies]
hex = "0.4.3"
bip39 = "2.0.0"
slip10 = "0.4.3"
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.3.0" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.3.0" }
thiserror = { workspace = true }
derive_more = { version = "1.0.0-beta.6", features = ["debug", "display"] }
itertools = "0.12.1"
strum_macros = "0.26.1"
strum = "0.26.1"
enum-iterator = "1.5.0"
zeroize = { workspace = true }
ed25519-dalek = { version = "1.0.1 " }
